<resources>
    <string name="app_name">AccountBook</string>
    <string name="title_statistics">统计</string>
    <string name="title_details">账单</string>
    <string name="title_me">我的</string>
    <string name="avatar">头像</string>
    <string name="username">用户名</string>
    <string name="phone_number">手机号</string>
    <string name="about">关于</string>
    <string name="sync">同步</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="logout">登出</string>
    <string name="login">登陆</string>
    <string name="sign_up">注册</string>
    <string name="exit_app">3秒内再点一次退出应用</string>
    <string name="background">背景</string>
    <string name="change_background">更换背景</string>
    <string name="user_name_cannot_be_null">用户名不能为空</string>
    <string name="password_cannot_be_null">密码不能为空</string>
    <string name="please_confirm_password">请确认密码</string>
    <string name="inconsistent_passwords">密码不一致</string>
    <string name="is_signing_up">"正在注册……"</string>
    <string name="successfully_sign_up">注册成功！</string>
    <string name="sign_up_finish_description">注册成功！您现在可以</string>
    <string name="return_to_login">返回登陆</string>
    <string name="user_name_already_exists">用户名已存在</string>
    <string name="is_logging">正在登录……</string>
    <string name="successfully_login">登录成功！</string>
    <string name="Incorrect_username_or_password">用户名或密码错误！</string>
    <string name="_username_already_exists">用户名已存在！</string>
    <string name="data_syncing">正在同步数据……</string>
    <string name="sync_finished">同步完成！</string>
    <string name="title_logout">退出登陆</string>
    <string name="dialog_message">登出后产生的数据记录仍属于本用户，继续登出吗？</string>
    <string name="sync_data">同步数据</string>
    <string name="sync_data_message">确定同步云端数据吗？</string>
    <string name="git_hub_link">https://github.com/seekerzhouk/AccountBook</string>
    <string name="author_name">seekerzhouk</string>
    <string name="network_disconnected">网络不可用，请检查网络连接！</string>
    <string name="bg_pic_suffix">_bg_pic.png</string>
    <string name="avatar_pic_suffix">_avatar_pic.png</string>
    <string name="version">version:</string>
    <string name="author_string">作者：</string>
    <string name="git_hub">GitHub：</string>
    <string name="input_your_feedback">请描述您的问题或反馈：</string>
    <string name="submit">提交</string>
    <string name="feedback_without_description">您还没有填写任何描述！</string>
    <string name="bg_submit">您的反馈已成功提交！</string>
    <string name="change_avatar">更换头像</string>
    <string name="not_support_username_modify">暂不支持修改用户名</string>
    <string name="add_cancel">取消</string>
    <string name="add_record">记一笔</string>
    <string name="add_type">类型</string>
    <string name="add_description">描述</string>
    <string name="add_amount">金额</string>
    <string name="add_input_description">请输入描述</string>
    <string name="add_input_amount">请输入金额</string>
    <string name="add_confirm">确定</string>
    <string name="current_phone_number">当前手机号：</string>
    <string name="bind_phone_number">绑定手机号</string>
    <string name="change_phone_number">更换手机号</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="input_verify_number">请输入验证码</string>
    <string name="get_verify_number">获取验证码</string>
    <string name="confirm_change">确认更换</string>
    <string name="not_bind">未绑定</string>
    <string name="confirm_bind">确认绑定</string>
    <string name="not_yet_implement">暂不开放</string>
    <string name="delete">删除</string>
    <string name="deleted_a_record">删除了一条记录</string>
    <string name="revoke">撤销</string>
    <string name="count_by_year">按年统计</string>
    <string name="count_by_month">按月统计</string>
</resources>
