<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.options.ChangePhoneFragment" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/change_phone_number"
        app:layout_constraintBottom_toTopOf="@+id/newPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/newPhoneNumber" />

    <EditText
        android:id="@+id/newPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/input_phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <EditText
        android:id="@+id/newVerifyNumber"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/input_verify_number"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/newPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/newPhoneNumber" />

    <Button
        android:id="@+id/getNewVerifyNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/get_verify_number"
        app:layout_constraintStart_toEndOf="@+id/newVerifyNumber"
        app:layout_constraintTop_toTopOf="@+id/newVerifyNumber" />

    <Button
        android:id="@+id/changeConfirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_common_selector"
        android:text="@string/confirm_change"
        app:layout_constraintEnd_toEndOf="@+id/newPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/newPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/newVerifyNumber" />
</androidx.constraintlayout.widget.ConstraintLayout>