<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.options.BindPhoneFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_set_number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/bind_phone_number"
            app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
            app:layout_constraintStart_toStartOf="@+id/phoneNumber" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/input_phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <EditText
            android:id="@+id/verifyNumber"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/input_verify_number"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

        <Button
            android:id="@+id/getVerifyNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/get_verify_number"
            app:layout_constraintStart_toEndOf="@+id/verifyNumber"
            app:layout_constraintTop_toTopOf="@+id/verifyNumber" />

        <Button
            android:id="@+id/bindConfirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_common_selector"
            android:text="@string/confirm_bind"
            app:layout_constraintEnd_toEndOf="@+id/phoneNumber"
            app:layout_constraintStart_toStartOf="@+id/phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/verifyNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>