<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.seekerzhouk.accountbook.ui.home.HomeFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.seekerzhouk.accountbook.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" >
        <action
            android:id="@+id/action_navigation_details_to_addFragment"
            app:destination="@id/addFragment"
            app:enterAnim="@anim/slide_top_in"
            app:popExitAnim="@anim/slide_top_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.seekerzhouk.accountbook.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" >
        <action
            android:id="@+id/action_navigation_me_to_aboutActivity"
            app:destination="@id/aboutActivity" />
        <action
            android:id="@+id/action_navigation_me_to_feedBackActivity"
            app:destination="@id/feedBackActivity" />
    </fragment>
    <activity
        android:id="@+id/aboutActivity"
        android:name="com.seekerzhouk.accountbook.ui.options.AboutActivity"
        android:label="activity_about"
        tools:layout="@layout/activity_about" />
    <activity
        android:id="@+id/feedBackActivity"
        android:name="com.seekerzhouk.accountbook.ui.options.FeedbackActivity"
        android:label="activity_feed_back"
        tools:layout="@layout/activity_feed_back" />
    <fragment
        android:id="@+id/addFragment"
        android:name="com.seekerzhouk.accountbook.ui.details.AddFragment"
        android:label="AddFragment" />
</navigation>